# beacon-server/internal/cache/reader.go
@@ -396,8 +396,8 @@ func (cr *CachedReader) GetCrossIATANeighbors(ctx context.Context, nodeID uuid.U
 }
 
 // ListChannels implements [api.Reader].
-func (cr *CachedReader) ListChannels(ctx context.Context, limit int32, hash []byte, iatas []string, cursor int64) (api.Page[api.ChannelSummary], error) {
-	return cr.inner.ListChannels(ctx, limit, hash, iatas, cursor)
+func (cr *CachedReader) ListChannels(ctx context.Context, limit int32, hash []byte, iatas []string, cursor int64, keyFilter string) (api.ChannelPage, error) {
+	return cr.inner.ListChannels(ctx, limit, hash, iatas, cursor, keyFilter)
 }
 
 // ListChannelMessages implements [api.Reader].
